
- Corrigido cálculo de espaço do silo para receber fertilizantes. - Reportado por @start_0

## [5.21.4] - 2025-07-31

### Changed

- O texto das plantações agora mostra exatamente quando a plantação vai estar madura/apodrecida.

## [5.21.3] - 2025-07-03

### Fixed

- Corrigido problema do silo ultrapassar sua capacidade máxima com Fertilizantes ao votar na Menhera. - Reportado por @mareys

## [5.21.2] - 2025-05-24

### Added

- Agora é possível ver as missões diárias de outro usuário.

### Changed

- A missão `Vença apostas no bicho` foi atualizada para `Aposte no bicho`. - Sugerido por @jokzy.y
- O prêmio para uma sugestão aprovada foi aumentada de `5000` para `30000` estrelinhas. 
- Aumentado o limite de apostas do Blackjack de `50000`para `100000` estrelinhas. - Sugerido por @jokzy.y
- Diminuído o preço da cor customizada de `50_000` para `35_000`. - Sugerido por @mareys

## [5.21.1] - 2025-04-04

### Added

- Adicionado o tempo para as missões diárias resetarem - Sugerido por @null00111111.
- Adicionado botão para usar um item em todos os campos da fazendinha ao mesmo tempo - Sugerido por @mareys.

## [5.21.0] - 2025-03-05

### Added

- **Melhorias de campos!** - Agora é possível melhorar os campos da fazendinha com os *Fertilizantes*. Os fertilizantes garantem que as plantações retornem mais plantas, e que amadureçam mais rápido. Use seus itens em `/fazendinha administrar campos`.
- É possível ganhar fertilizantes votando na Menhera! A chance para ganhar um fertilizante ao votar é de **40%**. Em finais de semana, a chance dobra para **80%**. Em atualizações futuras, será possível conseguir fertilizantes de outras formas.
- Adicionado novo top de fazendeiros: `/top fazendeiros tipo: mais plantas apodrecidas`.
- Sugestões aprovadas são notificadas com o `/notificações` - Sugerido por @tinyteca.

### Changed
