@@ -1164,8 +1164,12 @@
       "sell-plants": "Sell plants",
       "items": "Items",
       "sell-plant": "Sell {{plant}}",
+      "confirm-sell-all": "Sell all",
+      "confirm-title": "Do you really want to sell all plants?",
       "use-items": "Use items",
+      "sell-all-plants": "Sell every {{quality}}",
       "sell-all": "Sell Everything",
+      "choose-sell": "Choose what to sell",
       "sell-title": "Sell your plants",
       "quality-plants-2": "Premium Plants",
       "quality-plants-1": "Plants",
