@@ -1184,7 +1184,11 @@
       "sell-plants": "Vender plantas",
       "sell-plant": "Vender {{plant}}",
       "sell-all": "Vender tudo",
+      "confirm-sell-all": "Confirmar",
+      "confirm-title": "Você tem certeza que quer vender todas plantas?",
       "use-items": "Usar itens",
+      "choose-sell": "Escolha o que vender",
+      "sell-all-plants": "Vender todas {{quality}}",
       "quality-plants-2": "Plantas Premium",
       "quality-plants-1": "Plantas",
       "quality-plants-0": "Plantas Precárias",
