@@ -95,6 +95,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/lang/pt-BR/
 ### Fixed
 
 - Corrigido problema do silo ultrapassar sua capacidade máxima com Fertilizantes ao votar na Menhera. - Reportado por @mareys
+- Corrigido a `/loja vender plantas`, que as vezes não vendia todas as plantas selecionadas.
 
 ## [5.21.2] - 2025-05-24
 
